Update after gnulib changed.
* libtextstyle/gnulib-local/lib/termcap.h: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/lib/terminfo.h: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/lib/tparm.c: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/lib/tputs.c: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/m4/termcap.m4: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/m4/terminfo.m4: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/m4/curses.m4: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/modules/termcap: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/modules/termcap-h: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/modules/terminfo: Remove file (moved to gnulib).
* libtextstyle/gnulib-local/modules/terminfo-h: Remove file (moved to gnulib).
* libtextstyle/Makefile.am (EXTRA_DIST): Remove these files.

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -180,6 +180,8 @@
 /lib/stdbool.in.h
 /lib/stddef.in.h
 /lib/stdint.in.h
+/lib/stdio-read.c
+/lib/stdio-write.c
 /lib/stdio.in.h
 /lib/stdlib.in.h
 /lib/stpcpy.c
