--- a/.gitignore
+++ b/.gitignore
@@ -212,6 +212,7 @@
 /gettext-tools/libgettextpo/stdbool.in.h
 /gettext-tools/libgettextpo/stddef.in.h
 /gettext-tools/libgettextpo/stdint.in.h
+/gettext-tools/libgettextpo/stdio-read.c
 /gettext-tools/libgettextpo/stdio-write.c
 /gettext-tools/libgettextpo/stdio.in.h
 /gettext-tools/libgettextpo/stdlib.in.h
