gettext-runtime: Provide helper script to build against uninstalled binaries.
Prompted by <https://gcc.gnu.org/pipermail/gcc/2022-June/238929.html>.

* gettext-runtime/uninstalled-config.sh.in: New file.
* gettext-runtime/configure.ac: New variable ENABLE_SHARED. Generate
uninstalled-config.sh at configure time.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -185,11 +185,16 @@ if test "$CXX" = "no"; then
 fi
 AM_CONDITIONAL([ENABLE_LIBASPRINTF], [test -n "$SUBDIR_libasprintf"])
 
+dnl Determine variables used by uninstalled-config.sh.
+ENABLE_SHARED="$enable_shared"
+AC_SUBST([ENABLE_SHARED])
+
 AC_CONFIG_SUBDIRS([intl])
 
 AC_CONFIG_SUBDIRS([libasprintf])
 
 AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([uninstalled-config.sh])
 
 AC_CONFIG_FILES([doc/Makefile])
 
