intl: Add special hack for GCC.
Based on the commit
https://gcc.gnu.org/git/gitweb.cgi?p=gcc.git;h=4a1493f0603262a7dc1114d9827353e9810e63dc
by Jakub Jelinek <jakub@redhat.com>.

* gettext-runtime/intl/configure.ac: Accept option --enable-host-shared.
Set PICFLAG.
* gettext-runtime/intl/Makefile.am (AM_CFLAGS): Add the PICFLAG.
* gnulib-local/modules/gettext-runtime-intl-misc (Makefile.am): Add the PICFLAG
to AM_CFLAGS.

--- a/gettext-runtime/intl/Makefile.am
+++ b/gettext-runtime/intl/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile for the gettext-runtime/intl and gettext-tools/intl subdirectories
 ## of GNU gettext.
-## Copyright (C) 1995-1998, 2000-2007, 2009-2021 Free Software Foundation, Inc.
+## Copyright (C) 1995-1998, 2000-2007, 2009-2022 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU Lesser General Public License as published by
@@ -57,6 +57,9 @@ AM_CFLAGS = @CFLAG_VISIBILITY@
 if WOE32DLL
 AM_LDFLAGS = -Wl,--export-all-symbols
 endif
+
+# Support building libintl.a with -fPIC (needed by GCC).
+AM_CFLAGS += @PICFLAG@
 
 
 # Library include file and code.
