Fix "make distcheck" failure (regression from 2022-07-03).
* gettext-runtime/intl/export.h: Add a copyright notice.
* gettext-runtime/intl/Makefile.am (libgnuintl.h): Eliminate this copyright
notice when including export.h.

--- a/gettext-runtime/intl/Makefile.am
+++ b/gettext-runtime/intl/Makefile.am
@@ -234,6 +234,7 @@ libgnuintl.h: $(srcdir)/libgnuintl.in.h $(srcdir)/export.h
 	  fi \
 	| sed -e 's/extern \([^"]\)/extern LIBINTL_DLL_EXPORTED \1/' \
 	      -e "/#define _LIBINTL_H/r $(srcdir)/export.h" \
+	| sed -e "/#define _LIBINTL_H/,+15{/#define _LIBINTL_H/!d}" \
 	| sed -e 's,@''HAVE_VISIBILITY''@,@HAVE_VISIBILITY@,g' \
 	  > libgnuintl.h
 MOSTLYCLEANFILES += libgnuintl.h
