Split autogen.sh into autopull.sh and autogen.sh.
* autopull.sh: New file, based on autogen.sh.
* autogen.sh: Remove code that was moved to autopull.sh. Remove --skip-gnulib
option.
* HACKING: Mention autopull.sh.
* libtextstyle/autopull.sh: New file, based on libtextstyle/autogen.sh.
* libtextstyle/autogen.sh: Remove code that was moved to
libtextstyle/autopull.sh. Remove --skip-gnulib option.
* libtextstyle/HACKING: Mention autopull.sh.
* libtextstyle/m4/init-package-version.m4: Update comment.

--- a/.gitignore
+++ b/.gitignore
@@ -341,9 +341,11 @@
 /build-aux/test-driver
 /build-aux/ylwrap
 
-# Other files brought in by autogen.sh:
+# Other files brought in by autopull.sh:
 /build-aux/config.guess
 /build-aux/config.sub
+
+# Other files brought in by autogen.sh:
 # Dummy ChangeLogs:
 /ChangeLog
 /gettext-runtime/ChangeLog
