Update after gnulib changed.

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,7 @@
 /gettext-tools/libgettextpo/float.c
 /gettext-tools/libgettextpo/float.in.h
 /gettext-tools/libgettextpo/fopen.c
+/gettext-tools/libgettextpo/free.c
 /gettext-tools/libgettextpo/fstat.c
 /gettext-tools/libgettextpo/fstrcmp.c
 /gettext-tools/libgettextpo/fstrcmp.h
@@ -146,6 +147,7 @@
 /gettext-tools/libgettextpo/iconv_open-zos.gperf
 /gettext-tools/libgettextpo/iconv_open.c
 /gettext-tools/libgettextpo/iconveh.h
+/gettext-tools/libgettextpo/idx.h
 /gettext-tools/libgettextpo/intprops.h
 /gettext-tools/libgettextpo/inttypes.in.h
 /gettext-tools/libgettextpo/itold.c
@@ -207,6 +209,7 @@
 /gettext-tools/libgettextpo/stat-w32.c
 /gettext-tools/libgettextpo/stat-w32.h
 /gettext-tools/libgettextpo/stat.c
+/gettext-tools/libgettextpo/stdalign.in.h
 /gettext-tools/libgettextpo/stdarg.in.h
 /gettext-tools/libgettextpo/stdbool.in.h
 /gettext-tools/libgettextpo/stddef.in.h
@@ -285,17 +288,27 @@
 /gettext-tools/libgrep/glthread/
 /gettext-tools/libgrep/gnulib-m4/
 /gettext-tools/libgrep/Makefile.gnulib
+/gettext-tools/libgrep/attribute.h
 /gettext-tools/libgrep/btowc.c
 /gettext-tools/libgrep/c++defs.h
 /gettext-tools/libgrep/cdefs.h
+/gettext-tools/libgrep/dynarray.h
 /gettext-tools/libgrep/intprops.h
 /gettext-tools/libgrep/langinfo.in.h
 /gettext-tools/libgrep/libc-config.h
 /gettext-tools/libgrep/localeconv.c
+/gettext-tools/libgrep/malloc/dynarray.h
+/gettext-tools/libgrep/malloc/dynarray-skeleton.c
+/gettext-tools/libgrep/malloc/dynarray_at_failure.c
+/gettext-tools/libgrep/malloc/dynarray_emplace_enlarge.c
+/gettext-tools/libgrep/malloc/dynarray_finalize.c
+/gettext-tools/libgrep/malloc/dynarray_resize.c
+/gettext-tools/libgrep/malloc/dynarray_resize_clear.c
 /gettext-tools/libgrep/mbrlen.c
 /gettext-tools/libgrep/mbtowc-impl.h
 /gettext-tools/libgrep/mbtowc.c
 /gettext-tools/libgrep/nl_langinfo.c
+/gettext-tools/libgrep/nl_langinfo-lock.c
 /gettext-tools/libgrep/regcomp.c
 /gettext-tools/libgrep/regex.c
 /gettext-tools/libgrep/regex.h
@@ -303,6 +316,7 @@
 /gettext-tools/libgrep/regex_internal.h
 /gettext-tools/libgrep/regexec.c
 /gettext-tools/libgrep/warn-on-use.h
+/gettext-tools/libgrep/windows-initguard.h
 /gettext-tools/libgrep/wcrtomb.c
 /gettext-tools/man/x-to-1.in
 /gettext-tools/tests/init.sh
@@ -821,6 +835,8 @@ core
 /gettext-tools/libgettextpo/wchar.h
 /gettext-tools/libgettextpo/wctype.h
 /gettext-tools/libgrep/langinfo.h
+/gettext-tools/libgrep/malloc/dynarray-skeleton.gl.h
+/gettext-tools/libgrep/malloc/dynarray.gl.h
 /gettext-tools/po/??@*.insert-header
 /gettext-tools/po/remove-potcdate.sed
 /gettext-tools/src/gettext.res
