Update after gnulib changed.
Previously, different gnulib-tool invocations within the scope of the same
configure.ac interfered with each other (through the GNULIB_* indicator macros,
used in the generated .h files), and libgrep relied on it. Now, each gnulib-tool
invocation needs its own copy of the generated .h files, in particular locale.h.
Needed for the localeconv() override on native Windows.

* autogen.sh: When invoking gnulib-tool for libgrep, don't avoid 'locale' and
the other header file modules.
* gettext-tools/configure.ac: Set GL_GRGL_GNULIB_SETLOCALE_NULL to 1.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -208,6 +208,9 @@ gl_INIT
 grgl_INIT
 gtpo_INIT
 
+dnl Allow libgrep/locale.h to use setlocale_null.h from gnulib-lib/.
+GL_GRGL_GNULIB_SETLOCALE_NULL=1
+
 dnl Checks for header files.
 AC_CHECK_HEADERS([pwd.h])
 
