--- a/.gitignore
+++ b/.gitignore
@@ -292,14 +292,19 @@
 /gettext-tools/libgrep/glthread/
 /gettext-tools/libgrep/gnulib-m4/
 /gettext-tools/libgrep/Makefile.gnulib
+/gettext-tools/libgrep/_Noreturn.h
+/gettext-tools/libgrep/arg-nonnull.h
 /gettext-tools/libgrep/attribute.h
 /gettext-tools/libgrep/btowc.c
 /gettext-tools/libgrep/c++defs.h
 /gettext-tools/libgrep/cdefs.h
 /gettext-tools/libgrep/dynarray.h
 /gettext-tools/libgrep/intprops.h
+/gettext-tools/libgrep/inttypes.in.h
 /gettext-tools/libgrep/langinfo.in.h
 /gettext-tools/libgrep/libc-config.h
+/gettext-tools/libgrep/limits.in.h
+/gettext-tools/libgrep/locale.in.h
 /gettext-tools/libgrep/localeconv.c
 /gettext-tools/libgrep/malloc/dynarray.h
 /gettext-tools/libgrep/malloc/dynarray-skeleton.c
@@ -319,7 +324,17 @@
 /gettext-tools/libgrep/regex_internal.c
 /gettext-tools/libgrep/regex_internal.h
 /gettext-tools/libgrep/regexec.c
+/gettext-tools/libgrep/stdbool.in.h
+/gettext-tools/libgrep/stddef.in.h
+/gettext-tools/libgrep/stdint.in.h
+/gettext-tools/libgrep/stdlib.in.h
+/gettext-tools/libgrep/sys_types.in.h
+/gettext-tools/libgrep/unistd.c
+/gettext-tools/libgrep/unistd.in.h
 /gettext-tools/libgrep/warn-on-use.h
+/gettext-tools/libgrep/wchar.in.h
+/gettext-tools/libgrep/wctype-h.c
+/gettext-tools/libgrep/wctype.in.h
 /gettext-tools/libgrep/windows-initguard.h
 /gettext-tools/libgrep/wcrtomb.c
 /gettext-tools/man/x-to-1.in
@@ -838,9 +853,20 @@ core
 /gettext-tools/libgettextpo/uniwidth.h
 /gettext-tools/libgettextpo/wchar.h
 /gettext-tools/libgettextpo/wctype.h
+/gettext-tools/libgrep/inttypes.h
 /gettext-tools/libgrep/langinfo.h
+/gettext-tools/libgrep/limits.h
+/gettext-tools/libgrep/locale.h
+/gettext-tools/libgrep/stdbool.h
+/gettext-tools/libgrep/stddef.h
+/gettext-tools/libgrep/stdint.h
+/gettext-tools/libgrep/stdlib.h
+/gettext-tools/libgrep/unistd.h
+/gettext-tools/libgrep/wchar.h
+/gettext-tools/libgrep/wctype.h
 /gettext-tools/libgrep/malloc/dynarray-skeleton.gl.h
 /gettext-tools/libgrep/malloc/dynarray.gl.h
+/gettext-tools/libgrep/sys/types.h
 /gettext-tools/po/??@*.insert-header
 /gettext-tools/po/remove-potcdate.sed
 /gettext-tools/src/gettext.res
