Avoid warnings during configure execution with --disable-java.
Reported by Sam James <sam@cmpct.info>
in <https://savannah.gnu.org/bugs/?63193>.

* gettext-runtime/configure.ac: Expand gt_JAVACOMP_DISABLED inline.
* gettext-tools/configure.ac: Expand gt_JAVAEXEC_DISABLED and
gt_JAVACOMP_DISABLED inline.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -43,8 +43,28 @@ AS_IF([test "$JAVA_CHOICE" != no], [
     BUILDJAVA=no
   fi
 ], [
-  gt_JAVAEXEC_DISABLED
-  gt_JAVACOMP_DISABLED
+  CONF_JAVA=
+  HAVE_JAVA_ENVVAR=
+  HAVE_GIJ=
+  HAVE_JAVA=
+  HAVE_JRE=
+  HAVE_JVIEW=
+  AC_SUBST([CONF_JAVA])
+  AC_SUBST([HAVE_JAVA_ENVVAR])
+  AC_SUBST([HAVE_GIJ])
+  AC_SUBST([HAVE_JAVA])
+  AC_SUBST([HAVE_JRE])
+  AC_SUBST([HAVE_JVIEW])
+  CONF_JAVAC=
+  HAVE_JAVAC_ENVVAR=
+  HAVE_GCJ_C=
+  HAVE_JAVAC=
+  HAVE_JIKES=
+  AC_SUBST([CONF_JAVAC])
+  AC_SUBST([HAVE_JAVAC_ENVVAR])
+  AC_SUBST([HAVE_GCJ_C])
+  AC_SUBST([HAVE_JAVAC])
+  AC_SUBST([HAVE_JIKES])
   JAR=
   BUILDJAVA=no
 ])
