--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -42,7 +42,16 @@ AS_IF([test "$JAVA_CHOICE" != no], [
     BUILDJAVA=no
   fi
 ], [
-  gt_JAVACOMP_DISABLED
+  CONF_JAVAC=
+  HAVE_JAVAC_ENVVAR=
+  HAVE_GCJ_C=
+  HAVE_JAVAC=
+  HAVE_JIKES=
+  AC_SUBST([CONF_JAVAC])
+  AC_SUBST([HAVE_JAVAC_ENVVAR])
+  AC_SUBST([HAVE_GCJ_C])
+  AC_SUBST([HAVE_JAVAC])
+  AC_SUBST([HAVE_JIKES])
   JAR=
   BUILDJAVA=no
 ])
