libtextstyle: Fix .gitignore.

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -474,54 +474,54 @@ core
 /lib/libtextstyle.sym-t
 /lib/libtextstyle.sym.in-t1
 /lib/libtextstyle.sym.in-t2
-/libxml/DOCBparser.h
-/libxml/HTMLparser.h
-/libxml/HTMLtree.h
-/libxml/SAX.h
-/libxml/SAX2.h
-/libxml/c14n.h
-/libxml/catalog.h
-/libxml/chvalid.h
-/libxml/debugXML.h
-/libxml/dict.h
-/libxml/encoding.h
-/libxml/entities.h
-/libxml/globals.h
-/libxml/hash.h
-/libxml/list.h
-/libxml/nanoftp.h
-/libxml/nanohttp.h
-/libxml/parser.h
-/libxml/parserInternals.h
-/libxml/pattern.h
-/libxml/relaxng.h
-/libxml/schemasInternals.h
-/libxml/schematron.h
-/libxml/threads.h
-/libxml/tree.h
-/libxml/uri.h
-/libxml/valid.h
-/libxml/xinclude.h
-/libxml/xlink.h
-/libxml/xmlIO.h
-/libxml/xmlautomata.h
-/libxml/xmlerror.h
-/libxml/xmlexports.h
-/libxml/xmlmemory.h
-/libxml/xmlmodule.h
-/libxml/xmlreader.h
-/libxml/xmlregexp.h
-/libxml/xmlsave.h
-/libxml/xmlschemas.h
-/libxml/xmlschemastypes.h
-/libxml/xmlstring.h
-/libxml/xmlunicode.h
-/libxml/xmlversion.h
-/libxml/xmlwriter.h
-/libxml/xpath.h
-/libxml/xpathInternals.h
-/libxml/xpointer.h
-/libxml/*.h-t
+/lib/libxml/DOCBparser.h
+/lib/libxml/HTMLparser.h
+/lib/libxml/HTMLtree.h
+/lib/libxml/SAX.h
+/lib/libxml/SAX2.h
+/lib/libxml/c14n.h
+/lib/libxml/catalog.h
+/lib/libxml/chvalid.h
+/lib/libxml/debugXML.h
+/lib/libxml/dict.h
+/lib/libxml/encoding.h
+/lib/libxml/entities.h
+/lib/libxml/globals.h
+/lib/libxml/hash.h
+/lib/libxml/list.h
+/lib/libxml/nanoftp.h
+/lib/libxml/nanohttp.h
+/lib/libxml/parser.h
+/lib/libxml/parserInternals.h
+/lib/libxml/pattern.h
+/lib/libxml/relaxng.h
+/lib/libxml/schemasInternals.h
+/lib/libxml/schematron.h
+/lib/libxml/threads.h
+/lib/libxml/tree.h
+/lib/libxml/uri.h
+/lib/libxml/valid.h
+/lib/libxml/xinclude.h
+/lib/libxml/xlink.h
+/lib/libxml/xmlIO.h
+/lib/libxml/xmlautomata.h
+/lib/libxml/xmlerror.h
+/lib/libxml/xmlexports.h
+/lib/libxml/xmlmemory.h
+/lib/libxml/xmlmodule.h
+/lib/libxml/xmlreader.h
+/lib/libxml/xmlregexp.h
+/lib/libxml/xmlsave.h
+/lib/libxml/xmlschemas.h
+/lib/libxml/xmlschemastypes.h
+/lib/libxml/xmlstring.h
+/lib/libxml/xmlunicode.h
+/lib/libxml/xmlversion.h
+/lib/libxml/xmlwriter.h
+/lib/libxml/xpath.h
+/lib/libxml/xpathInternals.h
+/lib/libxml/xpointer.h
+/lib/libxml/*.h-t
 /lib/limits.h
 /lib/limits.h-t
 /lib/math.h
