build: Don't hint to --with-installed-csharp-dll when C# support is disabled.
When --disable-csharp was specified, gettext-tools/src/Makefile.am does not
produce msgunfmt.net.exe. Therefore it is irrelevant whether the condition
USE_INSTALLED_CSHARP_DLL evaluates to true or false. Thus the message
"WARNING: When building the gettext-tools package without building the entire
 gettext package, you need to pass the --with-installed-csharp-dll option to
 configure."
is pointless.

Reported by Ryan Schmidt in <https://savannah.gnu.org/bugs/?58668>.

* gettext-tools/configure.ac: Don't emit hint to use --with-installed-csharp-dll
when BUILDCSHARP is not 'yes'.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -154,7 +154,7 @@ AC_ARG_WITH([installed-csharp-dll],
      [Use an already installed C# DLL.])],
   [gt_use_installed_csharp_dll=$withval],
   [gt_use_installed_csharp_dll=no])
-if test "$gt_use_installed_csharp_dll" = no; then
+if test $BUILDCSHARP = yes && test "$gt_use_installed_csharp_dll" = no; then
   test -f ../gettext-runtime/intl-csharp/Makefile || {
     AC_MSG_WARN([When building the gettext-tools package without building the entire gettext package, you need to pass the --with-installed-csharp-dll option to configure.])
   }
